Fixed img alignment in article list/dashboard

--- a/elbisweb/frontend/src/article_Terminal.module.css
+++ b/elbisweb/frontend/src/article_Terminal.module.css
@@ -26,7 +26,6 @@ iframe{
     alignment: center;
 }
 img{
-    display: block;
     margin: 1.5rem;
 
 }
